[package]
name = "mini-kv"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
crc32fast = "1.4"
rand = "0.8"

[dev-dependencies]
rand = "0.8"
tempfile = "3.8"

[[bin]]
name = "minimal-lsm"
path = "src/main.rs"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[profile.release]
opt-level = 3
lto = true

[target.'cfg(unix)'.dependencies]
nix = "0.26"

